2004-06-12  David Malcolm  <dmalcolm@redhat.com>

	* storage/migr-test.c (main): Fixed command-line arg parsing
	of major, minor and revision

2004-06-10  Dan Winship  <danw@novell.com>

	* shell/e-storage-set-view.c (etree_value_at): Remove support for
	unread count

	* storage/exchange-account.c (exchange_account_update_folder):
	Remove this (and the associated signal).

	* storage/exchange-hierarchy.c
	(exchange_hierarchy_updated_folder): Likewise

	* storage/exchange-hierarchy-webdav.c (rescan): Remove call to
	exchange_hierarchy_updated_folder.

	* mail/mail-stub-exchange.c (folder_changed): Just set the
	folder's unread count. Don't worry about telling the
	ExchangeAccount.

2004-06-10  Dan Winship  <danw@novell.com>

	* camel/camel-exchange-transport.c (exchange_send_to): Fix
	camel_session_get_password() args

	* calendar/e-cal-backend-exchange.c (match_recurrence_sexp):
	Unused, remove.

	* calendar/e-cal-backend-exchange-tasks.c: Remove a bunch of
	unused functions

	* shell/e-storage-set-view.c (pixbuf_free_func): Unused, remove

2004-06-10  Dan Winship  <danw@novell.com>

	* storage/exchange-config-listener.c (add_defaults_for_account,
	remove_defaults_for_account): Remove a lot of dead code

	* storage/apps_evolution_exchange.schemas: No longer relevant

	* storage/Makefile.am: remove gconf schema bits

2004-06-07  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-favorites.c (remove_folder):
	Removing ESources with favorite folder deletion.
	This would be removed with code reorganization (#59168).

2004-06-04  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-config-listener.c (remove_esource):
	Checking for absolute URI only for contact folders.
	Fixes #59547

2004-06-04  Duarte Loreto <happyguy_pt@hotmail.com>

	* configure.in: Added Portuguese (pt) to ALL_LINGUAS.

2004-06-03  Dan Winship  <danw@novell.com>

	* storage/xc-backend-view.c (xc_backend_view_new): Put the
	treeview into a scrolled window, so it doesn't go all wacky if