@@ -1,3 +1,8 @@
+2004-06-12  Sushma Rai  <rsushma@novell.com>
+
+	* storage/migr-test.c (main): Removed hard coded values, and
+	changes to usage and error messages.
+
 2004-06-12  David Malcolm  <dmalcolm@redhat.com>
 
 	* storage/migr-test.c (main): Fixed command-line arg parsing
